feat(): adds support for android native facebook sdk
Fix #4

--- a/plugin.xml
+++ b/plugin.xml
@@ -22,6 +22,10 @@
       </feature>
     </config-file>
 
+    <config-file target="res/values/strings.xml" parent="/*">
+      <string name="facebook_app_id">$FB_APP_ID</string>
+    </config-file>
+
     <config-file target="AndroidManifest.xml" parent="/*">
       <uses-permission android:name="android.permission.INTERNET">
       </uses-permission>
@@ -46,6 +50,8 @@
             <data android:scheme="$PACKAGE_NAME" android:host="gsapi" />
         </intent-filter>
       </activity>
+      <activity android:name="com.facebook.LoginActivity"/>
+      <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
     </config-file>
 
     <source-file src="src/android/CordovaGigya.java" target-dir="src/us/platan/gigya" />
